--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="text-content">
-                  <h2>Welcome To Pump</h2>
+                  <h2>Welcome To Pump Pug</h2>
                   <div class="line-dec"></div>
                   <span>Coming soon</span>
                 </div>
